[project]
name = "pyzgy"
dynamic = ["version"]
authors = [
    {name = "equinor"}
]
description = "Convenience wrapper around OpenZGY Python implementation"
readme = {file = "README.rst", content-type = "text/markdown"}
dependencies = [
    "numpy>=1.20", "segyio", "xarray", "dask"
]
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Repository = "https://github.com/equinor/pyzgy"

[project.entry-points."xarray.backends"]
pyzgy_engine = "pyzgy.xarray:PyzgyBackendEntrypoint"

[build-system]
requires = ["setuptools", "setuptools_scm>=6.2"]

[tool.setuptools]
packages = ["pyzgy", "openzgy", "openzgy.impl"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]